--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "start": "rm -rf dist/* && webpack && http-server",
-    "build": "rm -rf dist/* && webpack"
+    "dev": "rm -rf dist/* && webpack && http-server dist/",
+    "build": "rm -rf dist/* && webpack",
+    "watch": "nodemon -e js,css,html --exec \"npm run dev\" -ignore dist/"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
@@ -13,10 +15,12 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "http-server": "^14.1.1",
+    "nodemon": "^2.0.20",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "particles.js": "^2.0.0"
-  }
+  },
+  "nodemonConfig": { "ignore": ["dist/*"] }
 }
